# algoplay

./: .gitignore  Algo001.hs  algo001.py
haskell/: algoplay.cabal
haskell/src/: Brackets.hs  TwentyFour.hs
haskell/test/: Spec.hs  TestBrackets.hs  TestTwentyFour.hs
python/: tox.ini
python/algoplay/: brackets.py  twentyfour.py
python/tests/: test_a001.py  test_a002.py
