name:                 algoplay
version:              0.0.1
license:              GPL-3
author:               Hope Ranker
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:
    Brackets,
    TwentyFour
  build-depends:
    base >= 4.7 && < 5,
    containers
  default-language:   Haskell2010

test-suite test-algoplay
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  build-depends:
    base >= 4.7 && < 5,
    containers,
    HUnit,
    algoplay
  default-language:   Haskell2010
  main-is:            Spec.hs
  other-modules:
    TestBrackets,
    TestTwentyFour
